--- a/style.css
+++ b/style.css
@@ -30,4 +30,11 @@
     background-color: Coral;
   }
 
+.category {
+    border-radius: 0.3rem;
+    color: red;
+    padding: 0.05rem;
+    margin-bottom: 1rem;
+  }
+
 
